# tempo-news-loader

./: README.md  pyproject.toml  run.sh
tempo_news/: __init__.py  cli.py  fetcher.py  markdown_writer.py  models.py  rag_integration.py  rag_service.py
tempo_news.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
